[gd_scene load_steps=2 format=3 uid="uid://dxhtmfvxexidj"]

[ext_resource type="Script" path="res://scenes/game-over-overlay/scene-game_over.gd" id="1_v08l7"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v08l7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="HighScoreEntryContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HighScoreEntryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer"]
layout_mode = 2
text = "New High Score!"

[node name="HighScoreInput" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer/HighScoreInput"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../SubmitButton")
focus_neighbor_bottom = NodePath("../../../../MarginContainer2/HBoxContainer/Restart")
focus_next = NodePath("../SubmitButton")
focus_previous = NodePath("../../../../MarginContainer2/HBoxContainer/Quit")
placeholder_text = "Enter your name"
max_length = 10

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer/HighScoreInput"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../LineEdit")
focus_neighbor_bottom = NodePath("../../../../MarginContainer2/HBoxContainer/Quit")
focus_next = NodePath("../../../../MarginContainer2/HBoxContainer/Restart")
focus_previous = NodePath("../LineEdit")
disabled = true
text = "SUBMIT
"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../../HighScoreEntryContainer/VBoxContainer/HighScoreInput/SubmitButton")
focus_neighbor_top = NodePath("../../../HighScoreEntryContainer/VBoxContainer/HighScoreInput/LineEdit")
focus_neighbor_right = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../../../HighScoreEntryContainer/VBoxContainer/HighScoreInput/SubmitButton")
text = "RESTART"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Restart")
focus_neighbor_top = NodePath("../../../HighScoreEntryContainer/VBoxContainer/HighScoreInput/SubmitButton")
focus_next = NodePath("../../../HighScoreEntryContainer/VBoxContainer/HighScoreInput/LineEdit")
focus_previous = NodePath("../Restart")
text = "QUIT"

[node name="FirstInputDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="text_changed" from="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer/HighScoreInput/LineEdit" to="." method="_on_name_changed"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer/HighScoreInput/LineEdit" to="." method="_on_input_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HighScoreEntryContainer/VBoxContainer/HighScoreInput/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer2/HBoxContainer/Restart" to="." method="_on_close_game_over" binds= ["Restart"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer2/HBoxContainer/Quit" to="." method="_on_close_game_over" binds= ["Quit"]]
[connection signal="timeout" from="FirstInputDelay" to="." method="_on_first_input_delay_timeout"]
